--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link
+            href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap&subset=latin-ext"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="style.css" />
         <title>Wisielec</title>
     </head>
@@ -11,39 +15,9 @@
         <div class="game">
             <div class="game-attempts"></div>
             <div class="game-sentence"></div>
-            <div class="game-letters">
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-                <a href="" class="game-letter">B</a>
-            </div>
+            <div class="game-letters"></div>
             <button type="button" class="button game-start">Losuj nowe hasło</button>
         </div>
+        <script src="script.js"></script>
     </body>
 </html>
